<resources>
    <string name="app_name">Playlister for Spotify</string>
    <string name="step_1">Step 1: Log in to Spotify</string>
    <string name="step_2">Step 2: Log in to Firebase</string>
    <string name="placeholder_playlist_title">Joe\'s Playlist</string>
    <string name="placeholder_playlist_author">Shared by: Joe</string>
    <string name="placeholder_song_title">Joe\'s Song</string>
    <string name="placeholder_song_artist">Joe</string>
    <string name="placeholder_score">0</string>
    <string name="content_desc_playlist_cover">Playlist Cover</string>
    <string name="content_desc_expand">Expand</string>
    <string name="content_desc_rate_up">Rate Up</string>
    <string name="content_desc_rate_down">Rate Down</string>
    <string name="share">Share</string>
    <string name="community">Community</string>
    <string name="my_profile">My Profile</string>
</resources>
