<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/userPlaylistPreview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#C9C9C9"
        android:paddingBottom="@dimen/fui_body_padding_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/userPlaylistCover"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:background="#C9C9C9"
            android:contentDescription="@string/content_desc_playlist_cover"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/common_google_signin_btn_icon_dark" />

        <TextView
            android:id="@+id/userPlaylistTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:fontFamily="sans-serif-black"
            android:lineSpacingExtra="0sp"
            android:text="@string/placeholder_playlist_title"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:typeface="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/userPlaylistCover"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/userExpand"
            android:layout_width="50dp"
            android:layout_height="20dp"
            android:layout_marginStart="206dp"
            android:layout_marginLeft="206dp"
            android:background="#C9C9C9"
            android:contentDescription="@string/content_desc_expand"
            android:rotation="0"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/userPlaylistCover"
            app:srcCompat="@android:drawable/arrow_down_float" />

        <Button
            android:id="@+id/userShare"
            android:layout_width="81dp"
            android:layout_height="39dp"
            android:layout_marginStart="80dp"
            android:layout_marginLeft="80dp"
            android:layout_marginBottom="24dp"
            android:text="@string/share"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/userPlaylistCover" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/userPlaylistBorderLine"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userPlaylistPreview" />

    <LinearLayout
        android:id="@+id/userTrackList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@+id/userPlaylistPreview"
        app:layout_constraintStart_toStartOf="@+id/userPlaylistPreview"
        app:layout_constraintTop_toBottomOf="parent">

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>